syntax = "proto3";

option go_package = "github.com/omihirofumi/keyvaluestore";

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {}

